# Dynamic-Rabbits

./: README.md  build_all.sh  build_bunnies.sh  run_tests.sh  set_paths.sh
cfi_bunny/src/: CMakeLists.txt  cfi_bunny.c  cfi_bunny.h  cfib_private.h
cfi_bunny/src/instrumentation/: cfib_instrum_register.c  cfib_instrum_register.h
cfi_bunny/src/instrumentation/handlers/: cfib_handlers.c  cfib_handlers.h
cfi_bunny/src/unit_tests/: CMakeLists.txt  cfib_test.c  cfib_test2.c  cfib_test3.c  program1.c  program2.c  program3.c  program4.c  program5.c
cfi_bunny/tools/db_cfi/src/: CMakeLists.txt  db_cfi.c
instrumentation_bunny/src/: CMakeLists.txt  ib_data.h  ib_defines.h  instrumentation_bunny.c  instrumentation_bunny.h
instrumentation_bunny/src/bbdup_instrum/: ib_bbdup_instrum.c  ib_bbdup_instrum.h  ib_bbdup_register.c
instrumentation_bunny/src/code_cache/: ib_code_cache.c  ib_code_cache.h
instrumentation_bunny/src/code_inline/: ib_code_inline.c  ib_code_inline.h
instrumentation_bunny/src/hook_info/: ib_hook_info.c  ib_hook_info.h
instrumentation_bunny/src/instrumentation/: ib_instrumenter.c  ib_instrumenter.h  ib_opnd_store.c  ib_opnd_store.h  ib_slot.c  ib_slot.h  ib_thread_data_loader.c  ib_thread_data_loader.h
instrumentation_bunny/src/opcode_hook_manager/: ib_hook_summary.c  ib_hook_summary.h  ib_instrum_tool.c  ib_instrum_tool.h  ib_opcode_hook_manager.c  ib_opcode_hook_manager.h
instrumentation_bunny/src/options/: ib_option.c  ib_option.h
instrumentation_bunny/src/tls_access/: ib_tls_access.c  ib_tls_access.h
instrumentation_bunny/src/unit_tests/: CMakeLists.txt  ib_module_slicer_test_app.c  ib_module_slicer_test_lib.c  instrumentation_bunny_test.c  instrumentation_bunny_test10.c  instrumentation_bunny_test11.c  instrumentation_bunny_test12.c  instrumentation_bunny_test13.c  instrumentation_bunny_test14.c  instrumentation_bunny_test15.c  instrumentation_bunny_test16.c  instrumentation_bunny_test17.c  instrumentation_bunny_test18.c  instrumentation_bunny_test19.c  instrumentation_bunny_test2.c  instrumentation_bunny_test20.c  instrumentation_bunny_test21.c  instrumentation_bunny_test22.c  instrumentation_bunny_test24.c  instrumentation_bunny_test25.c  instrumentation_bunny_test26.c  instrumentation_bunny_test27.c  instrumentation_bunny_test28.c  instrumentation_bunny_test29.c  instrumentation_bunny_test3.c  instrumentation_bunny_test30.c  instrumentation_bunny_test31.c  instrumentation_bunny_test32.c  instrumentation_bunny_test33.c  instrumentation_bunny_test34.c  instrumentation_bunny_test35.c  instrumentation_bunny_test36.c  instrumentation_bunny_test37.c  instrumentation_bunny_test38.c  instrumentation_bunny_test39.c  instrumentation_bunny_test4.c  instrumentation_bunny_test5.c  instrumentation_bunny_test6.c  instrumentation_bunny_test7.c  instrumentation_bunny_test8.c  (+2 more)
instrumentation_bunny/src/unit_tests/opcode_hook_manager/: ib_opcode_hook_manager_test.c
path_bunny/src/: CMakeLists.txt  path_bunny.c  path_bunny.h  pb_private.h
path_bunny/src/instrumentation/: pb_instrum_register.c  pb_instrum_register.h  pb_spill.c  pb_spill.h
path_bunny/src/unit_tests/: CMakeLists.txt  path_test.c  program1.c
slicer_bunny/src/: CMakeLists.txt  slicer_bunny.c  slicer_bunny.h
slicer_bunny/src/slicers/: sb_module_slicer.c  sb_module_slicer.h  sb_pc_slicer.c  sb_pc_slicer.h
slicer_bunny/src/unit_tests/: CMakeLists.txt
taint_bunny/src/: CMakeLists.txt  taint_bunny.c  taint_bunny.h  tb_bunny_private.h  tb_defines.h
taint_bunny/src/instrumentation/: tb_instrum_register.c  tb_instrum_register.h  tb_instrum_register_helper.c  tb_instrum_register_helper.h  tb_instrum_register_unsupported.c  tb_instrum_register_unsupported.h
taint_bunny/src/syscall_handlers/: tb_syscall_desc.h  tb_syscall_handlers.c  tb_syscall_handlers.h
taint_bunny/src/taint_annotations/: tb_annotation_handler.c  tb_annotation_handler.h
taint_bunny/src/taint_policies/: tb_cc_prepost.h  tb_cc_taint_policy.h  tb_raw_taint_policy.h
taint_bunny/src/tls_access/: tb_tls_access.c  tb_tls_access.h
taint_bunny/src/unit_tests/: CMakeLists.txt  taint_bunny_test.c
utility_bunny/src/: CMakeLists.txt  utility_bunny.h
utility_bunny/src/allocator/: ub_allocator.c  ub_allocator.h
utility_bunny/src/app_bb_truncators/: ub_addr_constant_reg_truncator.c  ub_addr_constant_reg_truncator.h  ub_drwrap_post_point_truncator.c  ub_drwrap_post_point_truncator.h  ub_opnd_limit_truncator.c  ub_opnd_limit_truncator.h  ub_truncator.h
utility_bunny/src/byte/: ub_bit_checker.c  ub_bit_checker.h  ub_byte_array.c  ub_byte_array.h
utility_bunny/src/dataflow/: ub_constant_analysis.c  ub_constant_analysis.h  ub_dataflow_analysis.c  ub_dataflow_analysis.h  ub_in_out_analysis.c  ub_in_out_analysis.h  ub_instr_flows.c  ub_instr_flows.h  ub_instr_parser.c  ub_instr_parser.h  ub_opnd_access.c  ub_opnd_access.h
utility_bunny/src/datastructs/: ub_datastruct.h
utility_bunny/src/instruction/: ub_comparison_instr.c  ub_comparison_instr.h  ub_complex_arithmetic_instr.c  ub_complex_arithmetic_instr.h  ub_cti_instr.c  ub_cti_instr.h  ub_generic_instr.c  ub_generic_instr.h  ub_instruction_checker.h  ub_misc_instr.c  ub_misc_instr.h  ub_pinstr.c  ub_pinstr.h  ub_ptr_arith_instr.c  ub_ptr_arith_instr.h  ub_rep_instr.c  ub_rep_instr.h  ub_shift_instr.c  ub_shift_instr.h  ub_srcdst_src_instr.c  ub_srcdst_src_instr.h  ub_transfer_instr.c  ub_transfer_instr.h  ub_xinstr_instr.c  ub_xinstr_instr.h
utility_bunny/src/instrumentation/: ub_instrum_insert.c  ub_instrum_insert.h
utility_bunny/src/ip/: ip.c  ip.h
utility_bunny/src/location/: ub_loc.c  ub_loc.h
utility_bunny/src/locks/: ub_spin_lock.c  ub_spin_lock.h
utility_bunny/src/readers/: ub_file_reader.c  ub_file_reader.h
utility_bunny/src/register/: ub_eflags.c  ub_eflags.h  ub_register.c  ub_register.h
utility_bunny/src/string/: ub_string.c  ub_string.h
utility_bunny/src/symbol_access/: ub_symbol_access.c  ub_symbol_access.h
utility_bunny/src/syscalls/: ub_syscall_helper.c  ub_syscall_helper.h
utility_bunny/src/unit_tests/: CMakeLists.txt
(+498 files in other folders)
